fixed z-index. closes #66

--- a/scss/_content.sass
+++ b/scss/_content.sass
@@ -40,7 +40,7 @@
   bottom: 0
   left: 0
   right: 0
-  z-index: 999
+  z-index: 100
 
   .wrapper
     float: right
